Compiladores/compilador20121/TP3/y.output
State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM ID SEMICOLON decl_list compound_stmt

    2 decl_list: decl_list SEMICOLON decl
    3          | decl
    4          | vazio

    5 decl: dcl_var
    6     | dcl_proc

    7 dcl_var: ident_list COLON type

    8 ident_list: ident_list COMMA ID
    9           | ID

   10 type: INTEGER
   11     | REAL
   12     | BOOLEAN
   13     | CHAR

   14 dcl_proc: tipo_retornado PROC ID espec_parametros corpo

   15 vazio: /* empty */

   16 tipo_retornado: INTEGER
   17               | REAL
   18               | BOOLEAN
   19               | CHAR
   20               | vazio

   21 corpo: COLON decl_list SEMICOLON compound_stmt after_proc_compound id_return
   22      | vazio

   23 after_proc_compound: vazio

   24 id_return: ID
   25          | vazio

   26 espec_parametros: lpar_espec_params lista_parametros RPAR

   27 lpar_espec_params: LPAR

   28 lista_parametros: parametro
   29                 | lista_parametros COMMA parametro

   30 parametro: modo type COLON ID

   31 modo: VALUE
   32     | REFERENCE

   33 compound_stmt: start_compound stmt_list end_compound

   34 start_compound: BEGIN_TOK

   35 end_compound: END

   36 stmt_list: stmt_list SEMICOLON stmt
   37          | stmt

   38 stmt: assign_stmt
   39     | if_stmt
   40     | repeat_stmt
   41     | read_stmt
   42     | write_stmt
   43     | compound_stmt
   44     | function_ref_par

   45 assign_stmt: ID ATRIB expr

   46 if_stmt: IF cond THEN stmt
   47        | IF cond THEN stmt ELSE stmt

   48 cond: expr

   49 repeat_stmt: REPEAT stmt_list UNTIL expr

   50 read_stmt: READ LPAR ident_list RPAR

   51 write_stmt: WRITE LPAR expr_list RPAR

   52 expr_list: expr
   53          | expr_list COMMA expr

   54 expr: simple_expr
   55     | simple_expr EQ simple_expr
   56     | simple_expr NE simple_expr
   57     | simple_expr GT simple_expr
   58     | simple_expr LT simple_expr
   59     | simple_expr GE simple_expr
   60     | simple_expr LE simple_expr

   61 simple_expr: term
   62            | simple_expr ADDOP term
   63            | simple_expr OR term

   64 term: factor_a
   65     | term MULOP factor_a
   66     | term AND factor_a
   67     | term MOD factor_a
   68     | term DIV factor_a

   69 factor_a: '-' factor
   70         | factor

   71 factor: ID
   72       | constant
   73       | LPAR expr RPAR
   74       | NOT factor
   75       | function_ref_par

   76 function_ref_par: built_in_function LPAR expr RPAR
   77                 | variable LPAR expr_list RPAR

   78 built_in_function: SIN
   79                  | COS
   80                  | LOG
   81                  | ORD
   82                  | ABS
   83                  | SQRT
   84                  | EXP
   85                  | EOFILE
   86                  | EOLN

   87 variable: simple_variable_or_proc

   88 simple_variable_or_proc: ID

   89 constant: INTEGER_CONSTANT
   90         | REAL_CONSTANT
   91         | CHAR_CONSTANT
   92         | boolean_constant

   93 boolean_constant: TRUE
   94                 | FALSE


Terminals, with rules where they appear

$end (0) 0
'-' (45) 69
error (256)
COMMA (258) 8 29 53
COLON (259) 7 21 30
SEMICOLON (260) 1 2 21 36
PROC (261) 14
SIN (262) 78
LOG (263) 80
COS (264) 79
ORD (265) 81
ABS (266) 82
SQRT (267) 83
EXP (268) 84
EOFILE (269) 85
EOLN (270) 86
PROGRAM (271) 1
INTEGER (272) 10 16
REAL (273) 11 17
BOOLEAN (274) 12 18
CHAR (275) 13 19
VALUE (276) 31
REFERENCE (277) 32
BEGIN_TOK (278) 34
END (279) 35
IF (280) 46 47
THEN (281) 46 47
ELSE (282) 47
REPEAT (283) 49
UNTIL (284) 49
READ (285) 50
WRITE (286) 51
FALSE (287) 94
TRUE (288) 93
ATRIB (289) 45
LPAR (290) 27 50 51 73 76 77
RPAR (291) 26 50 51 73 76 77
NOT (292) 74
EQ (293) 55
NE (294) 56
GT (295) 57
LT (296) 58
GE (297) 59
LE (298) 60
DIV (299) 68
MOD (300) 67
AND (301) 66
OR (302) 63
ADDOP (303) 62
MULOP (304) 65
ID (305) 1 8 9 14 24 30 45 71 88
INTEGER_CONSTANT (306) 89
REAL_CONSTANT (307) 90
CHAR_CONSTANT (308) 91


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
decl_list (57)
    on left: 2 3 4, on right: 1 2 21
decl (58)
    on left: 5 6, on right: 2 3
dcl_var (59)
    on left: 7, on right: 5
ident_list (60)
    on left: 8 9, on right: 7 8 50
type (61)
    on left: 10 11 12 13, on right: 7 30
dcl_proc (62)
    on left: 14, on right: 6
vazio (63)
    on left: 15, on right: 4 20 22 23 25
tipo_retornado (64)
    on left: 16 17 18 19 20, on right: 14
corpo (65)
    on left: 21 22, on right: 14
after_proc_compound (66)
    on left: 23, on right: 21
id_return (67)
    on left: 24 25, on right: 21
espec_parametros (68)
    on left: 26, on right: 14
lpar_espec_params (69)
    on left: 27, on right: 26
lista_parametros (70)
    on left: 28 29, on right: 26 29
parametro (71)
    on left: 30, on right: 28 29
modo (72)
    on left: 31 32, on right: 30
compound_stmt (73)
    on left: 33, on right: 1 21 43
start_compound (74)
    on left: 34, on right: 33
end_compound (75)
    on left: 35, on right: 33
stmt_list (76)
    on left: 36 37, on right: 33 36 49
stmt (77)
    on left: 38 39 40 41 42 43 44, on right: 36 37 46 47
assign_stmt (78)
    on left: 45, on right: 38
if_stmt (79)
    on left: 46 47, on right: 39
cond (80)
    on left: 48, on right: 46 47
repeat_stmt (81)
    on left: 49, on right: 40
read_stmt (82)
    on left: 50, on right: 41
write_stmt (83)
    on left: 51, on right: 42
expr_list (84)
    on left: 52 53, on right: 51 53 77
expr (85)
    on left: 54 55 56 57 58 59 60, on right: 45 48 49 52 53 73 76
simple_expr (86)
    on left: 61 62 63, on right: 54 55 56 57 58 59 60 62 63
term (87)
    on left: 64 65 66 67 68, on right: 61 62 63 65 66 67 68
factor_a (88)
    on left: 69 70, on right: 64 65 66 67 68
factor (89)
    on left: 71 72 73 74 75, on right: 69 70 74
function_ref_par (90)
    on left: 76 77, on right: 44 75
built_in_function (91)
    on left: 78 79 80 81 82 83 84 85 86, on right: 76
variable (92)
    on left: 87, on right: 77
simple_variable_or_proc (93)
    on left: 88, on right: 87
constant (94)
    on left: 89 90 91 92, on right: 72
boolean_constant (95)
    on left: 93 94, on right: 92


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM . ID SEMICOLON decl_list compound_stmt

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PROGRAM ID . SEMICOLON decl_list compound_stmt

    SEMICOLON  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: PROGRAM ID SEMICOLON . decl_list compound_stmt

    INTEGER  shift, and go to state 6
    REAL     shift, and go to state 7
    BOOLEAN  shift, and go to state 8
    CHAR     shift, and go to state 9
    ID       shift, and go to state 10

    $default  reduce using rule 15 (vazio)

    decl_list       go to state 11
    decl            go to state 12
    dcl_var         go to state 13
    ident_list      go to state 14
    dcl_proc        go to state 15
    vazio           go to state 16
    tipo_retornado  go to state 17


state 6

   16 tipo_retornado: INTEGER .

    $default  reduce using rule 16 (tipo_retornado)


state 7

   17 tipo_retornado: REAL .

    $default  reduce using rule 17 (tipo_retornado)


state 8

   18 tipo_retornado: BOOLEAN .

    $default  reduce using rule 18 (tipo_retornado)


state 9

   19 tipo_retornado: CHAR .

    $default  reduce using rule 19 (tipo_retornado)


state 10

    9 ident_list: ID .

    $default  reduce using rule 9 (ident_list)


state 11

    1 program: PROGRAM ID SEMICOLON decl_list . compound_stmt
    2 decl_list: decl_list . SEMICOLON decl

    SEMICOLON  shift, and go to state 18
    BEGIN_TOK  shift, and go to state 19

    compound_stmt   go to state 20
    start_compound  go to state 21


state 12

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


state 13

    5 decl: dcl_var .

    $default  reduce using rule 5 (decl)


state 14

    7 dcl_var: ident_list . COLON type
    8 ident_list: ident_list . COMMA ID

    COMMA  shift, and go to state 22
    COLON  shift, and go to state 23


state 15

    6 decl: dcl_proc .

    $default  reduce using rule 6 (decl)


state 16

    4 decl_list: vazio .
   20 tipo_retornado: vazio .

    PROC      reduce using rule 20 (tipo_retornado)
    $default  reduce using rule 4 (decl_list)


state 17

   14 dcl_proc: tipo_retornado . PROC ID espec_parametros corpo

    PROC  shift, and go to state 24


state 18

    2 decl_list: decl_list SEMICOLON . decl

    INTEGER  shift, and go to state 6
    REAL     shift, and go to state 7
    BOOLEAN  shift, and go to state 8
    CHAR     shift, and go to state 9
    ID       shift, and go to state 10

    $default  reduce using rule 15 (vazio)

    decl            go to state 25
    dcl_var         go to state 13
    ident_list      go to state 14
    dcl_proc        go to state 15
    vazio           go to state 26
    tipo_retornado  go to state 17


state 19

   34 start_compound: BEGIN_TOK .

    $default  reduce using rule 34 (start_compound)


state 20

    1 program: PROGRAM ID SEMICOLON decl_list compound_stmt .

    $default  reduce using rule 1 (program)


state 21

   33 compound_stmt: start_compound . stmt_list end_compound

    SIN        shift, and go to state 27
    LOG        shift, and go to state 28
    COS        shift, and go to state 29
    ORD        shift, and go to state 30
    ABS        shift, and go to state 31
    SQRT       shift, and go to state 32
    EXP        shift, and go to state 33
    EOFILE     shift, and go to state 34
    EOLN       shift, and go to state 35
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 36
    REPEAT     shift, and go to state 37
    READ       shift, and go to state 38
    WRITE      shift, and go to state 39
    ID         shift, and go to state 40

    compound_stmt            go to state 41
    start_compound           go to state 21
    stmt_list                go to state 42
    stmt                     go to state 43
    assign_stmt              go to state 44
    if_stmt                  go to state 45
    repeat_stmt              go to state 46
    read_stmt                go to state 47
    write_stmt               go to state 48
    function_ref_par         go to state 49
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52


state 22

    8 ident_list: ident_list COMMA . ID

    ID  shift, and go to state 53


state 23

    7 dcl_var: ident_list COLON . type

    INTEGER  shift, and go to state 54
    REAL     shift, and go to state 55
    BOOLEAN  shift, and go to state 56
    CHAR     shift, and go to state 57

    type  go to state 58


state 24

   14 dcl_proc: tipo_retornado PROC . ID espec_parametros corpo

    ID  shift, and go to state 59


state 25

    2 decl_list: decl_list SEMICOLON decl .

    $default  reduce using rule 2 (decl_list)


state 26

   20 tipo_retornado: vazio .

    $default  reduce using rule 20 (tipo_retornado)


state 27

   78 built_in_function: SIN .

    $default  reduce using rule 78 (built_in_function)


state 28

   80 built_in_function: LOG .

    $default  reduce using rule 80 (built_in_function)


state 29

   79 built_in_function: COS .

    $default  reduce using rule 79 (built_in_function)


state 30

   81 built_in_function: ORD .

    $default  reduce using rule 81 (built_in_function)


state 31

   82 built_in_function: ABS .

    $default  reduce using rule 82 (built_in_function)


state 32

   83 built_in_function: SQRT .

    $default  reduce using rule 83 (built_in_function)


state 33

   84 built_in_function: EXP .

    $default  reduce using rule 84 (built_in_function)


state 34

   85 built_in_function: EOFILE .

    $default  reduce using rule 85 (built_in_function)


state 35

   86 built_in_function: EOLN .

    $default  reduce using rule 86 (built_in_function)


state 36

   46 if_stmt: IF . cond THEN stmt
   47        | IF . cond THEN stmt ELSE stmt

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    cond                     go to state 69
    expr                     go to state 70
    simple_expr              go to state 71
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 37

   49 repeat_stmt: REPEAT . stmt_list UNTIL expr

    SIN        shift, and go to state 27
    LOG        shift, and go to state 28
    COS        shift, and go to state 29
    ORD        shift, and go to state 30
    ABS        shift, and go to state 31
    SQRT       shift, and go to state 32
    EXP        shift, and go to state 33
    EOFILE     shift, and go to state 34
    EOLN       shift, and go to state 35
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 36
    REPEAT     shift, and go to state 37
    READ       shift, and go to state 38
    WRITE      shift, and go to state 39
    ID         shift, and go to state 40

    compound_stmt            go to state 41
    start_compound           go to state 21
    stmt_list                go to state 78
    stmt                     go to state 43
    assign_stmt              go to state 44
    if_stmt                  go to state 45
    repeat_stmt              go to state 46
    read_stmt                go to state 47
    write_stmt               go to state 48
    function_ref_par         go to state 49
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52


state 38

   50 read_stmt: READ . LPAR ident_list RPAR

    LPAR  shift, and go to state 79


state 39

   51 write_stmt: WRITE . LPAR expr_list RPAR

    LPAR  shift, and go to state 80


state 40

   45 assign_stmt: ID . ATRIB expr
   88 simple_variable_or_proc: ID .

    ATRIB  shift, and go to state 81

    $default  reduce using rule 88 (simple_variable_or_proc)


state 41

   43 stmt: compound_stmt .

    $default  reduce using rule 43 (stmt)


state 42

   33 compound_stmt: start_compound stmt_list . end_compound
   36 stmt_list: stmt_list . SEMICOLON stmt

    SEMICOLON  shift, and go to state 82
    END        shift, and go to state 83

    end_compound  go to state 84


state 43

   37 stmt_list: stmt .

    $default  reduce using rule 37 (stmt_list)


state 44

   38 stmt: assign_stmt .

    $default  reduce using rule 38 (stmt)


state 45

   39 stmt: if_stmt .

    $default  reduce using rule 39 (stmt)


state 46

   40 stmt: repeat_stmt .

    $default  reduce using rule 40 (stmt)


state 47

   41 stmt: read_stmt .

    $default  reduce using rule 41 (stmt)


state 48

   42 stmt: write_stmt .

    $default  reduce using rule 42 (stmt)


state 49

   44 stmt: function_ref_par .

    $default  reduce using rule 44 (stmt)


state 50

   76 function_ref_par: built_in_function . LPAR expr RPAR

    LPAR  shift, and go to state 85


state 51

   77 function_ref_par: variable . LPAR expr_list RPAR

    LPAR  shift, and go to state 86


state 52

   87 variable: simple_variable_or_proc .

    $default  reduce using rule 87 (variable)


state 53

    8 ident_list: ident_list COMMA ID .

    $default  reduce using rule 8 (ident_list)


state 54

   10 type: INTEGER .

    $default  reduce using rule 10 (type)


state 55

   11 type: REAL .

    $default  reduce using rule 11 (type)


state 56

   12 type: BOOLEAN .

    $default  reduce using rule 12 (type)


state 57

   13 type: CHAR .

    $default  reduce using rule 13 (type)


state 58

    7 dcl_var: ident_list COLON type .

    $default  reduce using rule 7 (dcl_var)


state 59

   14 dcl_proc: tipo_retornado PROC ID . espec_parametros corpo

    LPAR  shift, and go to state 87

    espec_parametros   go to state 88
    lpar_espec_params  go to state 89


state 60

   94 boolean_constant: FALSE .

    $default  reduce using rule 94 (boolean_constant)


state 61

   93 boolean_constant: TRUE .

    $default  reduce using rule 93 (boolean_constant)


state 62

   73 factor: LPAR . expr RPAR

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    expr                     go to state 90
    simple_expr              go to state 71
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 63

   74 factor: NOT . factor

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67

    factor                   go to state 91
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 64

   71 factor: ID .
   88 simple_variable_or_proc: ID .

    LPAR      reduce using rule 88 (simple_variable_or_proc)
    $default  reduce using rule 71 (factor)


state 65

   89 constant: INTEGER_CONSTANT .

    $default  reduce using rule 89 (constant)


state 66

   90 constant: REAL_CONSTANT .

    $default  reduce using rule 90 (constant)


state 67

   91 constant: CHAR_CONSTANT .

    $default  reduce using rule 91 (constant)


state 68

   69 factor_a: '-' . factor

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67

    factor                   go to state 92
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 69

   46 if_stmt: IF cond . THEN stmt
   47        | IF cond . THEN stmt ELSE stmt

    THEN  shift, and go to state 93


state 70

   48 cond: expr .

    $default  reduce using rule 48 (cond)


state 71

   54 expr: simple_expr .
   55     | simple_expr . EQ simple_expr
   56     | simple_expr . NE simple_expr
   57     | simple_expr . GT simple_expr
   58     | simple_expr . LT simple_expr
   59     | simple_expr . GE simple_expr
   60     | simple_expr . LE simple_expr
   62 simple_expr: simple_expr . ADDOP term
   63            | simple_expr . OR term

    EQ     shift, and go to state 94
    NE     shift, and go to state 95
    GT     shift, and go to state 96
    LT     shift, and go to state 97
    GE     shift, and go to state 98
    LE     shift, and go to state 99
    OR     shift, and go to state 100
    ADDOP  shift, and go to state 101

    $default  reduce using rule 54 (expr)


state 72

   61 simple_expr: term .
   65 term: term . MULOP factor_a
   66     | term . AND factor_a
   67     | term . MOD factor_a
   68     | term . DIV factor_a

    DIV    shift, and go to state 102
    MOD    shift, and go to state 103
    AND    shift, and go to state 104
    MULOP  shift, and go to state 105

    $default  reduce using rule 61 (simple_expr)


state 73

   64 term: factor_a .

    $default  reduce using rule 64 (term)


state 74

   70 factor_a: factor .

    $default  reduce using rule 70 (factor_a)


state 75

   75 factor: function_ref_par .

    $default  reduce using rule 75 (factor)


state 76

   72 factor: constant .

    $default  reduce using rule 72 (factor)


state 77

   92 constant: boolean_constant .

    $default  reduce using rule 92 (constant)


state 78

   36 stmt_list: stmt_list . SEMICOLON stmt
   49 repeat_stmt: REPEAT stmt_list . UNTIL expr

    SEMICOLON  shift, and go to state 82
    UNTIL      shift, and go to state 106


state 79

   50 read_stmt: READ LPAR . ident_list RPAR

    ID  shift, and go to state 10

    ident_list  go to state 107


state 80

   51 write_stmt: WRITE LPAR . expr_list RPAR

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    expr_list                go to state 108
    expr                     go to state 109
    simple_expr              go to state 71
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 81

   45 assign_stmt: ID ATRIB . expr

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    expr                     go to state 110
    simple_expr              go to state 71
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 82

   36 stmt_list: stmt_list SEMICOLON . stmt

    SIN        shift, and go to state 27
    LOG        shift, and go to state 28
    COS        shift, and go to state 29
    ORD        shift, and go to state 30
    ABS        shift, and go to state 31
    SQRT       shift, and go to state 32
    EXP        shift, and go to state 33
    EOFILE     shift, and go to state 34
    EOLN       shift, and go to state 35
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 36
    REPEAT     shift, and go to state 37
    READ       shift, and go to state 38
    WRITE      shift, and go to state 39
    ID         shift, and go to state 40

    compound_stmt            go to state 41
    start_compound           go to state 21
    stmt                     go to state 111
    assign_stmt              go to state 44
    if_stmt                  go to state 45
    repeat_stmt              go to state 46
    read_stmt                go to state 47
    write_stmt               go to state 48
    function_ref_par         go to state 49
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52


state 83

   35 end_compound: END .

    $default  reduce using rule 35 (end_compound)


state 84

   33 compound_stmt: start_compound stmt_list end_compound .

    $default  reduce using rule 33 (compound_stmt)


state 85

   76 function_ref_par: built_in_function LPAR . expr RPAR

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    expr                     go to state 112
    simple_expr              go to state 71
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 86

   77 function_ref_par: variable LPAR . expr_list RPAR

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    expr_list                go to state 113
    expr                     go to state 109
    simple_expr              go to state 71
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 87

   27 lpar_espec_params: LPAR .

    $default  reduce using rule 27 (lpar_espec_params)


state 88

   14 dcl_proc: tipo_retornado PROC ID espec_parametros . corpo

    COLON  shift, and go to state 114

    $default  reduce using rule 15 (vazio)

    vazio  go to state 115
    corpo  go to state 116


state 89

   26 espec_parametros: lpar_espec_params . lista_parametros RPAR

    VALUE      shift, and go to state 117
    REFERENCE  shift, and go to state 118

    lista_parametros  go to state 119
    parametro         go to state 120
    modo              go to state 121


state 90

   73 factor: LPAR expr . RPAR

    RPAR  shift, and go to state 122


state 91

   74 factor: NOT factor .

    $default  reduce using rule 74 (factor)


state 92

   69 factor_a: '-' factor .

    $default  reduce using rule 69 (factor_a)


state 93

   46 if_stmt: IF cond THEN . stmt
   47        | IF cond THEN . stmt ELSE stmt

    SIN        shift, and go to state 27
    LOG        shift, and go to state 28
    COS        shift, and go to state 29
    ORD        shift, and go to state 30
    ABS        shift, and go to state 31
    SQRT       shift, and go to state 32
    EXP        shift, and go to state 33
    EOFILE     shift, and go to state 34
    EOLN       shift, and go to state 35
    BEGIN_TOK  shift, and go to state 19
    IF         shift, and go to state 36
    REPEAT     shift, and go to state 37
    READ       shift, and go to state 38
    WRITE      shift, and go to state 39
    ID         shift, and go to state 40

    compound_stmt            go to state 41
    start_compound           go to state 21
    stmt                     go to state 123
    assign_stmt              go to state 44
    if_stmt                  go to state 45
    repeat_stmt              go to state 46
    read_stmt                go to state 47
    write_stmt               go to state 48
    function_ref_par         go to state 49
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52


state 94

   55 expr: simple_expr EQ . simple_expr

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    simple_expr              go to state 124
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 95

   56 expr: simple_expr NE . simple_expr

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    simple_expr              go to state 125
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 96

   57 expr: simple_expr GT . simple_expr

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    simple_expr              go to state 126
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 97

   58 expr: simple_expr LT . simple_expr

    SIN               shift, and go to state 27
    LOG               shift, and go to state 28
    COS               shift, and go to state 29
    ORD               shift, and go to state 30
    ABS               shift, and go to state 31
    SQRT              shift, and go to state 32
    EXP               shift, and go to state 33
    EOFILE            shift, and go to state 34
    EOLN              shift, and go to state 35
    FALSE             shift, and go to state 60
    TRUE              shift, and go to state 61
    LPAR              shift, and go to state 62
    NOT               shift, and go to state 63
    ID                shift, and go to state 64
    INTEGER_CONSTANT  shift, and go to state 65
    REAL_CONSTANT     shift, and go to state 66
    CHAR_CONSTANT     shift, and go to state 67
    '-'               shift, and go to state 68

    simple_expr              go to state 127
    term                     go to state 72
    factor_a                 go to state 73
    factor                   go to state 74
    function_ref_par         go to state 75
    built_in_function        go to state 50
    variable                 go to state 51
    simple_variable_or_proc  go to state 52
    constant                 go to state 76
    boolean_constant         go to state 77


state 98

   59 expr: simple_expr GE . simple_expr
